2005-11-24  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* put.cpp, ostream.cpp: removed old COBRA include.

2005-11-22  Giulio Eulisse  <giulio.eulisse@cern.ch>

	* .admin/developers: more people added on pete request.

	* BuildFile, RFIO.h, RFIOError.h, RFIOFile.h, RFIOError.cc,
	RFIOFile.cc, BuildFile, ostream.cpp, put.cpp: files added to
	repository.
